--- a/templates/admin/user/add_user.html
+++ b/templates/admin/user/add_user.html
@@ -1,5 +1,5 @@
-{% extends 'admin/layout.html' %} {% block title %}Student{% endblock %} {%
-block main_conntent %}
+{% extends 'admin/layout.html' %} {% block title %}User{% endblock %} {% block
+main_conntent %}
 <!-- Main content -->
 <div class="content">
   <div class="container-fluid">
@@ -13,11 +13,11 @@ block main_conntent %}
                   <div class="col-6">
                     <h1 class="m-0" style="text-transform: uppercase">
                       <i class="fas fa-walking"></i>
-                      Add New Student
+                      Add New User
                     </h1>
                   </div>
                   <div class="col-6">
-                    <a href="{{ url_for('student') }}">
+                    <a href="{{ url_for('user') }}">
                       <button
                         type="button"
                         class="btn btn-outline-secondary float-right"
@@ -31,8 +31,7 @@ block main_conntent %}
             </div>
           </div>
           <div class="card-body">
-            <form action="{{ url_for('add_student') }}" method="POST">
-              {#--Name--#}
+            <form action="{{ url_for('add_user') }}" method="POST">
               <div class="input-group mb-3">
                 <div class="input-group-prepend">
                   <span class="input-group-text">Name</span>
@@ -45,37 +44,15 @@ block main_conntent %}
                   name="name"
                 />
               </div>
-              {#--Gender--#}
               <div class="input-group mb-3">
                 <div class="input-group-prepend">
-                  <span class="input-group-text">Gender</span>
+                  <span class="input-group-text">Status</span>
                 </div>
-                <select class="form-control" name="gender">
-                  <option value="male">Male</option>
-                  <option value="female">Female</option>
+                <select class="form-control" name="status">
+                  <option value="True">True</option>
+                  <option value="False">False</option>
                 </select>
               </div>
-              {#--address--#}
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <span class="input-group-text">Address</span>
-                </div>
-                <input
-                  type="text"
-                  class="form-control"
-                  required
-                  autocomplete="off"
-                  name="address"
-                />
-              </div>
-              {#--phone--#}
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <span class="input-group-text">Phone Number</span>
-                </div>
-                <input type="text" class="form-control" name="phone" />
-              </div>
-
               <input type="reset" class="btn btn-danger" value="Reset" />
               <input
                 type="submit"
