--- a/templates/admin/currency/edit_currency.html
+++ b/templates/admin/currency/edit_currency.html
@@ -1,6 +1,7 @@
-{% extends 'admin/layout.html' %} {% block title %}Student{% endblock %} {%
+{% extends 'admin/layout.html' %} {% block title %}Currency{% endblock %} {%
 block main_conntent %}
 <!-- Main content -->
+<br />
 <div class="content">
   <div class="container-fluid">
     <div class="row mt-3">
@@ -13,11 +14,11 @@ block main_conntent %}
                   <div class="col-6">
                     <h1 class="m-0" style="text-transform: uppercase">
                       <i class="fas fa-walking"></i>
-                      Add New Student
+                      Update Currency
                     </h1>
                   </div>
                   <div class="col-6">
-                    <a href="{{ url_for('student') }}">
+                    <a href="{{ url_for('currency') }}">
                       <button
                         type="button"
                         class="btn btn-outline-secondary float-right"
@@ -31,51 +32,57 @@ block main_conntent %}
             </div>
           </div>
           <div class="card-body">
-            <form action="{{ url_for('add_student') }}" method="POST">
-              {#--Name--#}
+            <form action="{{ url_for('edit_currency') }}" method="POST">
               <div class="input-group mb-3">
                 <div class="input-group-prepend">
                   <span class="input-group-text">Name</span>
                 </div>
+                <input type="hidden" value="{{ row[0].id }}" name="id">
                 <input
                   type="text"
                   class="form-control"
                   required
                   autocomplete="off"
-                  name="name"
+                  name="code"
+                  value="{{ row[0].code }}"
                 />
               </div>
-              {#--Gender--#}
               <div class="input-group mb-3">
                 <div class="input-group-prepend">
-                  <span class="input-group-text">Gender</span>
-                </div>
-                <select class="form-control" name="gender">
-                  <option value="male">Male</option>
-                  <option value="female">Female</option>
-                </select>
-              </div>
-              {#--address--#}
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <span class="input-group-text">Address</span>
+                  <span class="input-group-text">Symbol</span>
                 </div>
                 <input
                   type="text"
                   class="form-control"
                   required
                   autocomplete="off"
-                  name="address"
+                  name="symbol"
+                  value="{{ row[0].symbol }}"
                 />
-              </div>
-              {#--phone--#}
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <span class="input-group-text">Phone Number</span>
-                </div>
-                <input type="text" class="form-control" name="phone" />
               </div>
 
+              <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">Is Default</span>
+                </div>
+                <select class="form-control" name="is_default">
+                  <option value="True" {% if row[0].is_default == 'True' %}selected{% endif %}>True</option>
+                  <option value="False" {% if row[0].is_default == 'False' %}selected{% endif %}>False</option>
+                </select>
+              </div>
+              <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">Sell out price</span>
+                </div>
+                <input
+                  type="text"
+                  class="form-control"
+                  required
+                  autocomplete="off"
+                  name="sell_out_price"
+                  value="{{ row[0].sell_out_price }}"
+                />
+              </div>
               <input type="reset" class="btn btn-danger" value="Reset" />
               <input
                 type="submit"
