--- a/templates/admin/user/edit_user.html
+++ b/templates/admin/user/edit_user.html
@@ -38,7 +38,7 @@ block main_conntent %}
                 <div class="input-group-prepend">
                   <span class="input-group-text">Name</span>
                 </div>
-                <input type="hidden" value="{{ row[0].id }}" name="id">
+                <input type="hidden" value="{{ rows[0].id }}" name="id">
                 <input
                   readonly
                   type="text"
@@ -46,7 +46,7 @@ block main_conntent %}
                   required
                   autocomplete="off"
                   name="name"
-                  value="{{ row[0].name }}"
+                  value="{{ rows[0].name }}"
                 />
               </div>
               {#--Gender--#}
@@ -55,8 +55,8 @@ block main_conntent %}
                   <span class="input-group-text">Status</span>
                 </div>
                 <select class="form-control" name="status">
-                  <option value="True" {% if row[0].status == 'True' %}selected{% endif %}>True</option>
-                  <option value="False" {% if row[0].status == 'False' %}selected{% endif %}>False</option>
+                  <option value="True" {% if rows[0].status == 'True' %}selected{% endif %}>True</option>
+                  <option value="False" {% if rows[0].status == 'False' %}selected{% endif %}>False</option>
                 </select>
               </div>
               
